--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300&display=swap');
-@import '/css/header.css';
-@import '/css/about.css';
-@import '/css/servicios.css';
-@import '/css/clientes.css';
+@import './header.css';
+@import './about.css';
+@import './servicios.css';
+@import './clientes.css';
 
 * {
     margin: 0;
