--- a/css/main.css
+++ b/css/main.css
@@ -141,8 +141,8 @@ footer {
 }
 
 .system-icon img {
-    max-width: 2.5em;
-    max-height: 2.5em;
+    max-width: 5.5em;
+    max-height: 5.5em;
 }
 
 li a .system_icon {
@@ -182,7 +182,7 @@ li a .system_icon {
 
 
 .system_info h5 {
-    color: #68E1FD;
+    color: #0D7DFC;
     margin-bottom: 5px;
 }
 
